--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat-fda",
   "version": "0.1.0",
-    "description": "ChatFDA, a chat based RAG system to query data of the FDA",
+  "description": "ChatFDA, a chat based RAG system to query data of the FDA",
   "private": true,
   "type": "module",
   "scripts": {
@@ -21,29 +21,30 @@
   "author": "Thomas Hirsch",
   "license": "ISC",
   "dependencies": {
+    "@langchain/openai": "^0.6.9",
+    "@opensearch-project/opensearch": "^3.5.1",
+    "commander": "^13.1.0",
+    "dotenv": "^17.2.1",
+    "langchain": "^0.3.31",
     "next": "15.5.2",
+    "openai": "^5.15.0",
+    "p-retry": "^6.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "@langchain/openai": "^0.6.9",
-    "langchain": "^0.3.31",
-    "openai": "^5.15.0",
-    "@opensearch-project/opensearch": "^3.5.1",
-    "dotenv": "^17.2.1",
-    "commander": "^13.1.0",
-    "p-retry": "^6.2.1"
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20.14.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "vitest": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4",
-    "tsx": "^4.16.0",
     "tailwindcss": "^4",
-    "@tailwindcss/postcss": "^4",
-    "vite-tsconfig-paths": "^4.3.1"
+    "tsx": "^4.16.0",
+    "typescript": "^5.9.2",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^3.2.4"
   }
 }
