update README, prepare AWS auth for OpenSearch client

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -9,20 +9,21 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "ask": "tsx src/scripts/ask.ts --q \"pregnancy safe pain reliever\" --topK 8",
-    "retrieve": "tsx src/scripts/retrieve.ts --q \"ibuprofen pregnancy\" --topK 8",
+    "ask": "tsx src/scripts/ask.ts",
+    "retrieve": "tsx src/scripts/retrieve.ts",
     "scan:fields": "tsx src/scripts/scan-label-fields.ts",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:int": "RUN_INT=1 vitest run -t \"integration\"",
-    "ingest:batch": "tsx -r tsconfig-paths/register src/lib/job/cli.ts start-batch --file ../seeds/drug-seeds-10.csv --limit 100 --updatedSince 20240101 -v"
+    "ingest": "tsx -r tsconfig-paths/register src/lib/job/cli.ts"
   },
   "author": "Thomas Hirsch",
   "license": "ISC",
   "dependencies": {
     "@langchain/openai": "^0.6.9",
     "@opensearch-project/opensearch": "^3.5.1",
+    "@aws-sdk/credential-provider-node": "^3.637.0",
     "commander": "^13.1.0",
     "dotenv": "^17.2.1",
     "langchain": "^0.3.31",
